--- a/android/app/src/main/res/xml/apk_download.xml
+++ b/android/app/src/main/res/xml/apk_download.xml
@@ -3,4 +3,7 @@
     <files-path
         name="."
         path="apk_download/" />
+    <cache-path
+        name="."
+        path="." />
 </paths>
